<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="info_pin_requested">Por favor, digite o PIN</string>
    <string name="menu_print_last_order">Imprimir ultimo pedido</string>
    <string name="menu_refund">Reembolso</string>
    <string name="info_remove_card">Remova o cartão</string>
    <string name="info_tap_insert_swipe">Aproxime, insira ou passe o cartão</string>
    <string name="info_keep_card_near">Mantenha o cartão próximo</string>
    <string name="info_processing">Processando…</string>
    <string name="info_success">Pagamento aprovado</string>
    <string name="info_error_or_cancelled">Não foi possível concluir o pagamento</string>
    <string name="info_default">Siga as instruções no terminal</string>
    <string name="info_pix_qrcode_generated">Escaneie o QR Code para pagar</string>
    <string name="info_card_removed">Cartão removido com sucesso</string>
    <string name="success">Success</string>
    <string name="cash_payment">Pagamento em Dinheiro</string>
    <string name="awaiting_confirmation">Aguardando confirmação</string>
    <string name="enter_amount_received">Informe o valor recebido em dinheiro</string>
    <string name="amount_received">Valor Recebido</string>
    <string name="change">Troco</string>
    <string name="confirm_receipt">Confirmar Recebimento</string>
    <string name="insufficient_amount">Valor insuficiente</string>
    <string name="confirm_cash_receipt">Confirme o recebimento do valor em dinheiro</string>
    <string name="event_pix_qrcode_generated">QR Code PIX gerado</string>
    <string name="support_qr_code">In case of doubts, suggestions, or assistance, please scan the QR code above.</string>
    <plurals name="people_count">
        <item quantity="one">%d pessoa</item>
        <item quantity="other">%d pessoas</item>
    </plurals>
    <string name="cash">Money</string>
    <string name="update_menu">Update menu</string>
    <string name="configure_menu">Configure menu</string>
    <string name="export_database">Export database</string>
    <string name="cash_refund">Cash refund</string>
    <string name="descount_voucher">Discount voucher</string>
    <string name="credit_card">Credit</string>
    <string name="sync">Sync</string>
    <string name="pix">Pix</string>
    <string name="print_test">Print test</string>
    <string name="mark_consumed">Mark as consumed</string>
    <string name="exchange_for_voucher">Exchange for voucher</string>
    <string name="format_passes_default">Default</string>
    <string name="format_passes_compact">Compacted</string>
    <string name="format_passes_grouped">Grouped</string>
    <string name="added_to_cart">%s add to shoppingcart</string>
    <string name="enabled_printing_passes">Enabled printing passes</string>
    <string name="disabled_printing_passes">Disabled printing passes</string>
    <string name="format_passes">Format: %s</string>
    <string name="refund">Refund</string>
    <string name="payment_selected">%s selected</string>
    <string name="print_last_order">Print last order</string>
    <plurals name="items_count">
        <item quantity="one">1 item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="payment_form_title" translatable="false">"Payment form"</string>
    <string name="confirm_payment">Confirm</string>
    <string name="menu_total">Total</string>
    <string name="menu_opening">Opening</string>
    <string name="operator_name">Operator</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="menu_products">Products</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_passes">Passes</string>
    <string name="menu_withdrawal">Withdrawal</string>
    <string name="menu_history">History</string>
    <string name="menu_report">Report</string>
    <string name="login_email_input">Email/User</string>
    <string name="login_password_input">Password</string>
    <string name="login_enter_button">enter</string>
    <string name="attendant_name">enter</string>
    <string name="attendant_back">back</string>
    <string name="lets_take_off_sales">Lets take off your sales?</string>
    <string name="pos_title">POS</string>
    <string name="date_hour_title">Date and hour</string>
    <string name="choose_pos">Choose POS</string>
    <string name="manu_image">Menu logo</string>
    <string name="whats_going_on_today">Whats going on today?</string>
    <string name="point_to_qr_code">Point to the QR Code</string>
    <string name="login_text" translatable="false">"Landing here? Log in"</string>
    <string name="qrcode_scan_title">QR Code Payment</string>
    <string name="qrcode_scan_message">Please scan the QR code below to complete the payment</string>
    <string name="qrcode_scan_description">QR Code for payment scanning</string>
    <string name="is_qrcode_transaction">Is QR Code transaction</string>
    <string name="app_name" translatable="false">"Ticpass"</string>
    <string name="timeout_countdown_title">Time remaining</string>
    <string name="download_speed_bytes" translatable="false">%1$d B/s</string>
    <string name="download_speed_kb" translatable="false">%1$s KB/s</string>
    <string name="download_speed_mb" translatable="false">%1$s MB/s</string>
    <string name="about_wiki_title">Wiki</string>
    <string name="about_wiki_summary">Find answers to frequently asked questions (F.A.Q.), troubleshooting steps and more</string>
    <string name="about_bhim">"BHIM - UPI"</string>
    <string name="about_bhim_summary">"Donate via UPI"</string>
    <string name="about_bitcoin_bch">"Bitcoin Cash"</string>
    <string name="about_bitcoin_bch_summary">"Donate via Bitcoin Cash (BCH)"</string>
    <string name="about_bitcoin_btc">"Bitcoin"</string>
    <string name="about_bitcoin_btc_summary">"Donate via Bitcoin (BTC)"</string>
    <string name="about_bitcoin_eth">"Ethereum"</string>
    <string name="about_bitcoin_eth_summary">"Donate via Ethereum (ETH)"</string>
    <string name="about_fdroid">"F-Droid"</string>
    <string name="about_fdroid_summary">"Get the Ticpass via F-Droid."</string>
    <string name="about_gitlab">"GitLab"</string>
    <string name="about_gitlab_summary">"Get the Ticpass source code from Aurora OSS on GitLab."</string>
    <string name="about_libera">"Liberapay"</string>
    <string name="action_blacklist">"Blacklist"</string>
    <string name="action_cancel">"Cancel"</string>
    <string name="action_clear">"Clear"</string>
    <string name="action_copy_link">"Copy link"</string>
    <string name="action_favourite">"Favourite"</string>
    <string name="action_get_local_apk">"Save app bundle"</string>
    <string name="action_ignore">"Ignore"</string>
    <string name="action_install">"Install"</string>
    <string name="action_share">"Share"</string>
    <string name="action_uninstall">"Uninstall"</string>
    <string name="action_home_screen">Add to home screen</string>
    <string name="action_info">"App info"</string>
    <string name="onboarding_title_permissions">"Permissions"</string>
    <string name="pref_common_extra">"Extras"</string>
    <string name="pref_filter_fdroid_summary">"Don't check updates for apps installed from F-Droid"</string>
    <string name="pref_filter_fdroid_title">"Filter F-Droid apps"</string>
    <string name="pref_install_delete_summary">Downloaded APKs will be deleted immediately after installation</string>
    <string name="pref_install_delete_title">"Delete APK post-install"</string>
    <string name="pref_install_mode_summary">"Select mode of APK installation"</string>
    <string name="pref_install_mode_title">"Installation method"</string>
    <string name="pref_vending_version_title">Google Play version</string>
    <string name="pref_network_title">"Networking"</string>
    <string name="pref_network_proxy_url">"Proxy URL"</string>
    <string name="pref_ui_title">"Customization"</string>
    <string name="pref_ui_no_for_you">"For you pages"</string>
    <string name="pref_ui_no_for_you_desc">"Display For you pages on home screen"</string>
    <string name="pref_ui_similar_apps">"Similar and related apps"</string>
    <string name="pref_ui_similar_apps_desc">"Display similar and related clusters on app details page"</string>
    <string name="pref_updates_incompatible">Show updates that may fail</string>
    <string name="pref_updates_incompatible_desc">Display updates for incompatible or disabled apps that may fail to install</string>
    <string name="pref_aurora_only">Filter apps from other sources</string>
    <string name="pref_aurora_only_desc">Don\'t check for updates for apps installed from sources outside Ticpass</string>
    <string name="title_about">About</string>
    <string name="title_app_settings">"App settings"</string>
    <string name="title_blacklist_manager">"Blacklist manager"</string>
    <string name="title_download_manager">"Downloads"</string>
    <string name="title_download_playstore">"Play Store"</string>
    <string name="title_installation">"Installation"</string>
    <string name="title_settings">"Settings"</string>
    <string name="title_spoof_manager">"Spoof manager"</string>
    <string name="title_updates">"Updates"</string>
    <string name="title_manual_download">"Manual download"</string>
    <string name="pref_updates_auto">Automatic updates</string>
    <string name="pref_updates_auto_desc">Configure automatic updates behaviour</string>
    <string name="pref_updates_check_frequency">Automatic updates frequency</string>
    <string name="pref_updates_check_frequency_desc">Configure time interval for automatic updates, in hour.</string>
    <string name="app_language">App language</string>
    <string name="pref_ui_layout">Layout</string>
    <string name="pref_ui_layout_tab">Select default tab</string>
    <string name="pref_clear_device_owner_title">Clear device owner</string>
    <string name="pref_clear_device_owner_summary">Removes Ticpass as the device owner app</string>
    <string name="pref_dispenser_title">Manage dispensers</string>
    <string name="pref_dispenser_summary">View and manage token dispensers for anonymous logins</string>
    <string name="plexus_powered">Powered by Plexus</string>
    <string name="plexus_progress">Checking compatibility…</string>
    <string name="details_compatibility_title">Compatibility</string>
    <string name="details_compatibility_gms_required_title">Requires Google Play Services</string>
    <string name="details_compatibility_gms_required_subtitle">You may need to install Google’s proprietary library or a FOSS reimplementation such as microG.</string>
    <string name="details_compatibility_microg">With microG Project</string>
    <string name="details_compatibility_no_gms">Without Google Play Services</string>
    <string name="pref_network_microg_login_title">Use microG to sign in to accounts</string>
    <string name="pref_network_microg_login_desc">Authenticate using microG when signing into Google accounts for a simpler sign-in flow</string>
    <string name="pref_network_proxy_desc">View and manage proxy configuration</string>
    <string name="pref_common_advanced">Advanced</string>
    <string name="pref_updates_restrictions_title">Automatic updates restrictions</string>
    <string name="pref_updates_restrictions_desc">Configure device restrictions for automated updates.</string>
    <string name="pref_updates_app_source">App source</string>
    <string name="cancel">cancel</string>
    <string name="confirm">confirm</string>
    <string name="nfc_balance_set_title">Set Balance</string>
    <string name="nfc_balance_set_description">Enter the balance amount to store on the NFC tag.</string>
    <string name="nfc_balance_amount_hint">Amount</string>
    <string name="nfc_balance_max_info">Maximum: $4,294,967.295</string>
</resources>