<!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <br.com.ticpass.pos.view.custom.preference.AuroraListPreference
        app:defaultValue="2"
        app:entries="@array/pref_updates_auto"
        app:entryValues="@array/pref_updates_auto_values"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_UPDATES_AUTO"
        app:summary="@string/pref_updates_auto_desc"
        app:title="@string/pref_updates_auto" />

    <SeekBarPreference
        android:defaultValue="3"
        android:key="PREFERENCE_UPDATES_CHECK_INTERVAL"
        android:max="24"
        android:summary="@string/pref_updates_check_frequency_desc"
        android:title="@string/pref_updates_check_frequency"
        app:adjustable="true"
        app:iconSpaceReserved="false"
        app:min="1"
        app:showSeekBarValue="true" />

    <Preference
        app:disableDependentsState="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCES_UPDATES_RESTRICTIONS"
        app:summary="@string/pref_updates_restrictions_desc"
        app:title="@string/pref_updates_restrictions_title" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_updates_app_source" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_FILTER_FDROID"
        app:summary="@string/pref_filter_fdroid_summary"
        app:title="@string/pref_filter_fdroid_title" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_FILTER_AURORA_ONLY"
        app:summary="@string/pref_aurora_only_desc"
        app:title="@string/pref_aurora_only" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_common_advanced" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_UPDATES_EXTENDED"
        app:summary="@string/pref_updates_incompatible_desc"
        app:title="@string/pref_updates_incompatible" />
</androidx.preference.PreferenceScreen>
