<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_favorite_unchecked"
        android:title="@string/action_favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_uninstall"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_uninstall"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_download_manual"
        android:title="@string/title_manual_download" />

    <item
        android:id="@+id/menu_download_manager"
        android:title="@string/title_download_manager" />

    <item
        android:id="@+id/menu_app_settings"
        android:title="@string/title_app_settings" />

    <item
        android:id="@+id/action_playstore"
        android:title="@string/title_download_playstore" />

    <item
        android:id="@+id/action_home_screen"
        android:title="@string/action_home_screen"
        android:visible="false" />
</menu>
