<!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_DISPENSER_URLS"
        app:summary="@string/pref_dispenser_summary"
        app:title="@string/pref_dispenser_title" />

    <Preference
        app:disableDependentsState="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_PROXY_URL"
        app:summary="@string/pref_network_proxy_desc"
        app:title="@string/pref_network_proxy_url" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_common_extra" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:disableDependentsState="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_MICROG_AUTH"
        app:summary="@string/pref_network_microg_login_desc"
        app:title="@string/pref_network_microg_login_title" />

    <br.com.ticpass.pos.view.custom.preference.AuroraListPreference
        app:defaultValue="0"
        app:entries="@array/pref_vending_version"
        app:entryValues="@array/pref_vending_version_values"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_VENDING_VERSION"
        app:title="@string/pref_vending_version_title"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>
