<!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_INSTALLER_ID"
        app:summary="@string/pref_install_mode_summary"
        app:title="@string/pref_install_mode_title" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_common_extra" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_AUTO_DELETE"
        app:summary="@string/pref_install_delete_summary"
        app:title="@string/pref_install_delete_title" />

    <Preference
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="PREFERENCE_INSTALLATION_DEVICE_OWNER"
        app:summary="@string/pref_clear_device_owner_summary"
        app:title="@string/pref_clear_device_owner_title" />
</androidx.preference.PreferenceScreen>
