<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_shopping"
            android:title="@string/menu_products"
            app:actionLayout="@layout/nav_item"/>

        <item
            android:id="@+id/nav_passes"
            android:icon="@drawable/ic_pass"
            android:title="@string/menu_passes"
            app:actionLayout="@layout/nav_item"/>

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_server"
            android:title="@string/menu_history"
            app:actionLayout="@layout/nav_item"/>

        <item
            android:id="@+id/nav_print_last_order"
            android:icon="@drawable/ic_print_last_order"
            android:title="@string/menu_print_last_order"
            app:actionLayout="@layout/nav_item"/>

        <item
            android:id="@+id/nav_refund"
            android:icon="@drawable/ic_refund"
            android:title="@string/menu_refund"
            app:actionLayout="@layout/nav_item"/>

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_file_copy"
            android:title="@string/menu_report"
            app:actionLayout="@layout/nav_item"/>

        <item
            android:id="@+id/nav_withdrawal"
            android:icon="@drawable/ic_cash_register"
            android:title="@string/menu_withdrawal"
            app:actionLayout="@layout/nav_item"/>

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support"
            android:title="@string/menu_support"
            app:actionLayout="@layout/nav_item"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"
            app:actionLayout="@layout/nav_item"/>

        <!-- Sync continua com o layout que tem ProgressBar -->
        <item
            android:id="@+id/button_sync"
            app:actionLayout="@layout/menu_item_sync"
            tools:ignore="MenuTitle" />

    </group>
</menu>