<!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_APP_LANGUAGE"
        app:title="@string/app_language" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_ui_layout" />

    <br.com.ticpass.pos.view.custom.preference.AuroraListPreference
        app:defaultValue="0"
        app:entries="@array/pref_default_tab"
        app:entryValues="@array/pref_default_tab_values"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_DEFAULT_SELECTED_TAB"
        app:title="@string/pref_ui_layout_tab"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_common_extra" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_FOR_YOU"
        app:summary="@string/pref_ui_no_for_you_desc"
        app:title="@string/pref_ui_no_for_you" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_SIMILAR"
        app:summary="@string/pref_ui_similar_apps_desc"
        app:title="@string/pref_ui_similar_apps" />
</androidx.preference.PreferenceScreen>
