<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_local"
        android:title="@string/action_get_local_apk" />
    <item
        android:id="@+id/action_install"
        android:title="@string/action_install" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy_link" />
    <item
        android:id="@+id/action_cancel"
        android:title="@string/action_cancel" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear" />
</menu>
