<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_blacklist"
        android:title="@string/action_blacklist" />
    <item
        android:id="@+id/action_ignore"
        android:title="@string/action_ignore"
        android:visible="false" />
    <item
        android:id="@+id/action_local"
        android:title="@string/action_get_local_apk" />
    <item
        android:id="@+id/action_uninstall"
        android:title="@string/action_uninstall" />
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info" />
</menu>