<!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:icon="@drawable/ic_list_check"
        app:iconSpaceReserved="false"
        app:key="pref_perms"
        app:layout="@layout/item_preference"
        app:title="@string/onboarding_title_permissions" />

    <Preference
        app:icon="@drawable/ic_installation"
        app:iconSpaceReserved="false"
        app:key="pref_install"
        app:layout="@layout/item_preference"
        app:title="@string/title_installation" />

    <Preference
        app:icon="@drawable/ic_ui"
        app:iconSpaceReserved="false"
        app:key="pref_ui"
        app:layout="@layout/item_preference"
        app:title="@string/pref_ui_title" />

    <Preference
        app:icon="@drawable/ic_network"
        app:iconSpaceReserved="false"
        app:key="pref_network"
        app:layout="@layout/item_preference"
        app:title="@string/pref_network_title" />

    <Preference
        app:icon="@drawable/ic_updates"
        app:iconSpaceReserved="false"
        app:key="pref_updates"
        app:layout="@layout/item_preference"
        app:title="@string/title_updates" />
</PreferenceScreen>
