<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 Ticpass. All rights reserved.
  ~
  ~ PROPRIETARY AND CONFIDENTIAL
  ~
  ~ This software is the confidential and proprietary information of Ticpass
  ~ ("Confidential Information"). You shall not disclose such Confidential Information
  ~ and shall use it only in accordance with the terms of the license agreement you
  ~ entered into with Ticpass.
  ~
  ~ Unauthorized copying, distribution, or use of this software, via any medium,
  ~ is strictly prohibited without the express written permission of Ticpass.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_blacklist_manager"
        android:icon="@drawable/ic_blacklist"
        android:title="@string/title_blacklist_manager" />

    <item
        android:id="@+id/menu_spoof_manager"
        android:icon="@drawable/ic_anonymous"
        android:title="@string/title_spoof_manager" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/title_about" />
</menu>
